@@ -5,6 +5,9 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+October 14, 2011
++ [kaori] enable all progression orders
+
 October 12, 2011
 + [kaori] enable layers requests; restricting the number of codesream quality layers
 
